--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.471.0",
     "next": "^13.5.1",
     "postcss": "8.4.30",
     "react": "^18.2.0",
